--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
     //QQ
     compile files('libs/open_sdk_r5781_lite.jar')
+    //alipay
+    compile files('libs/alipaySdk-20161222.jar')
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -102,8 +104,8 @@ dependencies {
     compile('io.socket:socket.io-client:0.8.3') {
         exclude group: 'org.json', module: 'json'
     }
-//    compile files('libs/jcore-android_v1.1.0.jar')
-//    compile files('libs/jmessage-android-2.0.0.jar')
-//    compile files('libs/jpush-android_v3.0.1.jar')
+    //    compile files('libs/jcore-android_v1.1.0.jar')
+    //    compile files('libs/jmessage-android-2.0.0.jar')
+    //    compile files('libs/jpush-android_v3.0.1.jar')
 
 }
