增加我的订单界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -212,6 +212,9 @@
                 android:name=".ui.grade.MaterialDownloadActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:name=".ui.mine.MyOrderActivity"
+                android:screenOrientation="portrait"/>
+        <activity
                 android:name=".common.im.ChatActivity"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustResize"/>
