add release pkg logic

--- a/ks.properties
+++ b/ks.properties
@@ -1,10 +1,4 @@
-keyAlias = xma
-keyPwd = xiaojs100y
-storeFile = ks.jks
-storePwd = xiaojs100y
-
-
-#keyAlias = xjs_edu
-#keyPwd = xjs2016
-#storeFile = xiaojs.jks
-#storePwd = xiaojs2016...
+keyAlias = xjs_edu
+keyPwd = xjs2016
+storeFile = xiaojs.jks
+storePwd = xiaojs2016...
