--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
+apply plugin: 'walle'
 
 def ksPro = new Properties()
 ksPro.load(new FileInputStream(rootProject.file("ks.properties")))
@@ -26,6 +27,7 @@ android {
 
         }
     }
+
     buildTypes {
 //        debug {
 //            minifyEnabled true
@@ -86,6 +88,10 @@ dependencies {
     compile files('libs/open_sdk_r5781_lite.jar')
     //alipay
     compile files('libs/alipaySdk-20161222.jar')
+
+    //build apk
+    compile 'com.meituan.android.walle:library:1.0.5'
+
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -108,4 +114,10 @@ dependencies {
     //    compile files('libs/jmessage-android-2.0.0.jar')
     //    compile files('libs/jpush-android_v3.0.1.jar')
 
+}
+
+walle {
+    apkOutputFolder = new File("${project.buildDir}/outputs/channels");
+    apkFileNameFormat = 'xiaojs_${buildType}_${channel}_v${versionName}_${versionCode}.apk';
+    channelFile = "channel";
 }
