--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.meituan.android.walle:plugin:1.0.5'
+
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         //bugly符号表
         classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
