课程，添加确认报名页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,8 @@
         </activity>
         <activity android:name=".ui.lesson.LessonHomeActivity">
         </activity>
+        <activity android:name=".ui.lesson.ConfirmEnrollmentActivity"
+                  android:screenOrientation="portrait"/>
         <activity android:name=".ui.TestAPIActivity">
 
         </activity>
@@ -242,13 +244,13 @@
                 android:name="com.alipay.sdk.app.H5PayActivity"
                 android:configChanges="orientation|keyboardHidden|navigation"
                 android:exported="false"
-                android:screenOrientation="behind" >
+                android:screenOrientation="behind">
         </activity>
         <activity
                 android:name="com.alipay.sdk.auth.AuthActivity"
                 android:configChanges="orientation|keyboardHidden|navigation"
                 android:exported="false"
-                android:screenOrientation="behind" >
+                android:screenOrientation="behind">
         </activity>
 
         <!-- service -->
