--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,12 +86,12 @@ dependencies {
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
     //QQ
     compile files('libs/open_sdk_r5781_lite.jar')
-    //alipay
-    compile files('libs/alipaySdk-20161222.jar')
+    //pay
+    compile 'com.pingxx:pingpp-core:2.1.7'
+    compile 'com.pingxx:pingpp-alipay:2.1.7'
 
     //build apk
     compile 'com.meituan.android.walle:library:1.0.5'
-
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -113,7 +113,6 @@ dependencies {
     //    compile files('libs/jcore-android_v1.1.0.jar')
     //    compile files('libs/jmessage-android-2.0.0.jar')
     //    compile files('libs/jpush-android_v3.0.1.jar')
-
 }
 
 walle {
