--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -238,8 +238,22 @@
                 android:name="com.tencent.connect.common.AssistActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
-        <!--alipay-->
+        <!-- Ping++ SDK -->
+        <activity
+                android:name="com.pingplusplus.android.PaymentActivity"
+                android:configChanges="orientation|screenSize"
+                android:launchMode="singleTop"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
 
+                <data android:scheme="con.xiaojs.xma.wallet"/>
+            </intent-filter>
+        </activity>
+
+        <!--alipay-->
         <activity
                 android:name="com.alipay.sdk.app.H5PayActivity"
                 android:configChanges="orientation|keyboardHidden|navigation"
