1.增加新的空页面 2.优化部分显示和跳转逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
         </activity>
         <activity
                 android:name=".ui.MainActivity"
+                android:launchMode="singleTask"
                 android:screenOrientation="portrait">
         </activity>
         <activity
