--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,8 @@
                 android:name=".ui.lesson.MyLessonActivity"
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.lesson.LessonCreationActivity"/>
+        <activity android:name=".ui.lesson.TeachingSubjectActivity"
+                  android:screenOrientation="portrait"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
         <activity
                 android:name=".ui.lesson.LessonSearchActivity"
