科目选择，教学能力申请

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,8 @@
         <activity android:name=".ui.lesson.LessonCreationActivity"/>
         <activity android:name=".ui.lesson.TeachingSubjectActivity"
                   android:screenOrientation="portrait"/>
+        <activity android:name=".ui.lesson.SubjectSelectorActivity"
+                  android:screenOrientation="portrait"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
         <activity
                 android:name=".ui.lesson.LessonSearchActivity"
