--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,8 +92,9 @@
                 android:name=".ui.lesson.TeachingSubjectActivity"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustResize|stateHidden"/>
-        <activity android:name=".ui.lesson.SubjectSelectorActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.SubjectSelectorActivity"
+                android:screenOrientation="portrait"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
         <activity
                 android:name=".ui.lesson.LessonSearchActivity"
@@ -109,6 +110,7 @@
                 android:name=".ui.lesson.ConfirmEnrollmentActivity"
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.TestAPIActivity">
+
         </activity>
         <activity android:name=".ui.lesson.LiveLessonBriefActivity"/>
         <activity android:name=".ui.lesson.SalePromotionActivity"/>
@@ -221,6 +223,11 @@
                 android:name=".common.im.ChatActivity"
                 android:screenOrientation="portrait"
                 android:windowSoftInputMode="adjustResize"/>
+        <activity
+                android:name=".ui.UpgradeActivity"
+                android:theme="@style/dlg_upgrade"
+                >
+        </activity>
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
@@ -281,6 +288,17 @@
                 android:exported="false">
         </provider>
 
+        <provider
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="cn.xiaojs.xma.fileprovider"
+                android:grantUriPermissions="true"
+                android:exported="false"
+                >
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths" />
+        </provider>
+
         <service
                 android:name=".data.download.DownloadService"
                 android:enabled="true"
@@ -292,12 +310,12 @@
         </service>
 
         <!-- JPush -->
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <activity
                 android:name="cn.jpush.android.ui.PushActivity"
                 android:configChanges="orientation|keyboardHidden"
-                android:theme="@android:style/Theme.NoTitleBar"
-                android:exported="false">
+                android:exported="false"
+                android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity"/>
 
@@ -305,7 +323,7 @@
                 <category android:name="cn.xiaojs.xma"/>
             </intent-filter>
         </activity>
-        <!-- Required SDK 核心功能-->
+        <!-- Required SDK 核心功能 -->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
         <service
                 android:name="cn.jpush.android.service.PushService"
@@ -326,17 +344,17 @@
                 android:exported="true">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.DaemonService"/>
+
                 <category android:name="cn.xiaojs.xma"/>
             </intent-filter>
-
         </service>
 
-        <!-- Required SDK核心功能-->
+        <!-- Required SDK核心功能 -->
         <receiver
                 android:name="cn.jpush.android.service.PushReceiver"
                 android:enabled="true">
             <intent-filter android:priority="1000">
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY"/>   <!--Required  显示通知栏 -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY"/> <!-- Required  显示通知栏 -->
                 <category android:name="cn.xiaojs.xma"/>
             </intent-filter>
             <intent-filter>
@@ -360,17 +378,17 @@
         <!-- Required Push SDK核心功能 -->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver"/>
 
-        <!-- User defined.  For test only  用户自定义的广播接收器-->
+        <!-- User defined.  For test only  用户自定义的广播接收器 -->
         <receiver
                 android:name=".service.JPushReceiver"
-                android:exported="false"
-                android:enabled="true">
+                android:enabled="true"
+                android:exported="false">
             <intent-filter>
-                <action android:name="cn.jpush.android.intent.REGISTRATION"/> <!--Required  用户注册SDK的intent-->
-                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED"/> <!--Required  用户接收SDK消息的intent-->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED"/> <!--Required  用户接收SDK通知栏信息的intent-->
-                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED"/> <!--Required  用户打开自定义通知栏的intent-->
-                <action android:name="cn.jpush.android.intent.CONNECTION"/><!-- 接收网络变化 连接/断开 since 1.6.3 -->
+                <action android:name="cn.jpush.android.intent.REGISTRATION"/> <!-- Required  用户注册SDK的intent -->
+                <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED"/> <!-- Required  用户接收SDK消息的intent -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED"/> <!-- Required  用户接收SDK通知栏信息的intent -->
+                <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED"/> <!-- Required  用户打开自定义通知栏的intent -->
+                <action android:name="cn.jpush.android.intent.CONNECTION"/> <!-- 接收网络变化 连接/断开 since 1.6.3 -->
                 <category android:name="cn.xiaojs.xma"/>
             </intent-filter>
         </receiver>
@@ -399,6 +417,10 @@
 
         <activity android:name=".ui.message.ChooseClassActivity">
         </activity>
+
+
+
+
     </application>
 
 </manifest>
