--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,11 +91,15 @@
         <activity
                 android:name=".ui.lesson.TeachingSubjectActivity"
                 android:screenOrientation="portrait"
-                android:windowSoftInputMode="adjustResize|stateHidden"/>
+                android:windowSoftInputMode="adjustPan"/>
         <activity
                 android:name=".ui.lesson.SubjectSelectorActivity"
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.mine.ProfileActivity"/>
+
+
+
+
         <activity
                 android:name=".ui.lesson.LessonSearchActivity"
                 android:screenOrientation="portrait"/>
