--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,12 +86,15 @@ dependencies {
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
     //QQ
     compile files('libs/open_sdk_r5781_lite.jar')
+    //
+    compile files('libs/AMap_Location_V3.3.0_20170118.jar')
     //pay
     compile 'com.pingxx:pingpp-core:2.1.7'
     compile 'com.pingxx:pingpp-alipay:2.1.7'
-
     //build apk
     compile 'com.meituan.android.walle:library:1.0.5'
+    //gaode
+    compile files('libs/AMap_Location_V3.3.0_20170118.jar')
     //suport test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -113,6 +116,7 @@ dependencies {
     //    compile files('libs/jcore-android_v1.1.0.jar')
     //    compile files('libs/jmessage-android-2.0.0.jar')
     //    compile files('libs/jpush-android_v3.0.1.jar')
+
 }
 
 walle {
