1. 报名注册逻辑添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -221,6 +221,8 @@
         <activity
                 android:name=".ui.lesson.EnrollLessonActivity"
                 android:screenOrientation="portrait"/>
+        <activity android:name=".ui.lesson.EnrollRegisterActivity"
+                  android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.grade.MaterialDownloadActivity"
                 android:screenOrientation="portrait"/>
