--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="cn.xiaojs.xma"
-          android:versionCode="16"
+          android:versionCode="20"
           android:versionName="1.0.0">
 
     <!-- Required -->
@@ -67,14 +67,16 @@
         </activity>
         <activity
                 android:name=".ui.account.LoginActivity"
-                android:screenOrientation="portrait"
                 android:launchMode="singleTask"
+                android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         </activity>
-        <activity android:name=".ui.account.ForgetPasswordStepOneActivity"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ui.account.ForgetPasswordStepTwoActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.account.ForgetPasswordStepOneActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.account.ForgetPasswordStepTwoActivity"
+                android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.MainActivity"
                 android:launchMode="singleTask"
@@ -221,8 +223,9 @@
         <activity
                 android:name=".ui.lesson.EnrollLessonActivity"
                 android:screenOrientation="portrait"/>
-        <activity android:name=".ui.lesson.EnrollRegisterActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name=".ui.lesson.EnrollRegisterActivity"
+                android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.grade.MaterialDownloadActivity"
                 android:screenOrientation="portrait"/>
@@ -239,6 +242,8 @@
         </activity>
         <activity android:name=".ui.account.AgreementActivity"/>
         <activity android:name=".ui.mine.AboutActivity"/>
+        <activity android:name=".ui.lesson.EnrolledStudentActivity">
+        </activity>
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
@@ -315,6 +320,10 @@
         </service>
         <service
                 android:name=".data.download.UpdateService"
+                android:exported="false">
+        </service>
+        <service
+                android:name=".data.loader.UpgradeService"
                 android:exported="false">
         </service>
 
