--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -445,11 +445,14 @@
                   android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="cn.leancloud.chatkit.conversation_item_click_action"/>
+                <action android:name="cn.leancloud.chatkit.chat_notification_action"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.message.im.chatkit.activity.LCIMImageActivity"/>
+        <activity android:name=".ui.message.im.chatkit.activity.LCIMImageActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/scan_image_activity"/>
 
     </application>
 
