--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "cn.xiaojs.xma"
         minSdkVersion 15
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 27
-        versionName "1.0.2"
+        versionCode 29
+        versionName "1.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
@@ -57,7 +57,11 @@ android {
 }
 
 dependencies {
+
+    compile 'com.android.support:multidex:1.0.1'
+
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.orhanobut:logger:1.15'
 
     //avoscloud-sdk 为 LeanCloud基础包
     compile ('cn.leancloud.android:avoscloud-sdk:v3.+')
@@ -112,7 +116,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-jackson:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.orhanobut:logger:1.15'
     compile 'com.google.android:flexbox:0.2.3'
     compile 'com.qiniu:qiniu-android-sdk:7.2.+'
     compile 'com.tencent.bugly:crashreport:latest.release'
