--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -258,6 +258,7 @@
         <activity android:name=".ui.ArticleActivity"/>
         <activity android:name=".ui.lesson.EnrolledStudentActivity">
         </activity>
+        <activity android:name=".ui.GuideBrowseActivity"/>
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
