教室优化：1 替换最新的七牛so，升级七牛sdk。2 优化直播的进度时间

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,10 +117,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.google.android:flexbox:0.2.3'
+    compile 'com.qiniu:happy-dns:0.2.8'
+    compile 'com.qiniu.pili:pili-android-qos:0.8.18'
     compile 'com.qiniu:qiniu-android-sdk:7.2.+'
     compile 'com.tencent.bugly:crashreport:latest.release'
-    compile 'com.qiniu:happy-dns:0.2.+'
-    compile 'com.qiniu.pili:pili-android-qos:0.8.+'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
     compile 'com.pingxx:pingpp-core:2.1.7'
     compile 'com.pingxx:pingpp-alipay:2.1.7'
