--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -112,7 +112,8 @@
                 android:name=".ui.account.RegisterActivity"
                 android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
-        <activity android:name=".ui.mine.SettingsActivity"/>
+        <activity android:name=".ui.mine.SettingsActivity"
+                  android:screenOrientation="portrait"/>
         <activity
                 android:name=".ui.account.ModifyPasswordActivity"
                 android:screenOrientation="portrait"/>
