--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -260,6 +260,7 @@
         <activity android:name=".ui.lesson.EnrolledStudentActivity">
         </activity>
         <activity android:name=".ui.GuideBrowseActivity"/>
+        <activity android:name="com.kaola.qrcodescanner.qrcode.QrCodeActivity"/>
         <!-- QQ -->
         <activity
                 android:name="com.tencent.tauth.AuthActivity"
