--- a/qrcode/build.gradle
+++ b/qrcode/build.gradle
@@ -20,5 +20,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //compile 'com.google.zxing:core:3.3.0'
+    compile 'com.google.zxing:android-core:3.3.0'
+
     compile "com.android.support:appcompat-v7:24.2.1"
 }
