首页框架调整完善工作，调整联系人、消息、个人主页入口以及对应功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -198,6 +198,7 @@
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.message.ShareScopeActivity">
         </activity>
+
         <activity
                 android:name=".ui.search.SearchListActivity"
                 android:screenOrientation="portrait"/>
@@ -230,6 +231,11 @@
                 android:name=".ui.personal.PersonalInfoActivity"
                 android:screenOrientation="portrait"/>
         <activity android:name=".ui.message.CloseFriendActivity"/>
+
+        <activity
+            android:name=".ui.message.MessageCenterActivity"
+            android:screenOrientation="portrait"/>
+
         <activity
                 android:name=".TestActivity"
                 android:screenOrientation="landscape"
