红点逻辑修改，个人页简介调整

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -257,6 +257,9 @@
                 android:name=".ui.mine.MyOrderActivity"
                 android:screenOrientation="portrait"/>
         <activity
+            android:name=".ui.mine.MySignatureDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity
                 android:name=".ui.UpgradeActivity"
                 android:theme="@style/dlg_upgrade">
         </activity>
